--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.1",
     "http-proxy-middleware": "^2.0.6",
     "lodash": "^4.17.21",
+    "netlify": "^11.0.2",
     "nodemailer": "^6.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
